# terminai

./: .env  .env.swp  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DENO_MIGRATION_PLAN.md  HOMEBREW_TAP.md  HYBRID_INTEGRATION_PLAN.md  HYBRID_INTEGRATION_PROGRESS.md  HYBRID_TERMINAL_PROGRESS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INSTALL_MACOS.md  INTEGRATION_SUMMARY.md  LLM_OVER_AG_UI_DESIGN.md  LLM_OVER_AG_UI_PROGRESS.md  MACOS_SUPPORT.md  MIGRATION_STATUS.md  MPROCS_BORROWED.md  MPROCS_PATCHES.md  ORIGINAL_IMPLEMENTATION_PLAN.md  ORIGINAL_PRD.md  ORIGINAL_SUMMARY.md  PHASE5_COMPLETION.md  PROGRESS.md  PYTHON_LLM_DESIGN.md  PYTHON_LLM_IMPLEMENTATION_PROGRESS.md  PYTHON_LLM_INTEGRATION_GUIDE.md  RATATUI_FIX_JOURNAL.md  README.md  REFACTOR_PLAN.md  RELEASE.md  SALSA.md  SESSION_SUMMARY.md  STRATEGIC_PIVOT.md  TESTING.md  TODO.md  (+13 more)
.cargo/: config.toml
.claude/: settings.json
.codex/skills/create-release/: SKILL.md
.codex/skills/create-release/agents/: openai.yaml
.github/workflows/: macos-build.yml  qa-artifacts.yml  release.yml  validate-formula.yml  windows.yml
Formula/: terminai.rb
config/: claude.yaml  codex.yaml  default.jinja  general.yaml  opencode.yaml
crossterm-0.28-facade/: Cargo.toml
crossterm-0.28-facade/src/: lib.rs
docs/: 404.html  CNAME  config.html  index.html  llm_architecture.md  schema-v0.1.0.json  schema-v0.1.11.json  schema-v0.1.13.json  schema-v0.1.4.json  schema-v0.1.5.json  schema-v0.1.9.json  styles.css  windows-support.md
docs/plans/: 2026-05-14-cli-agent-mcp-terminal.md  2026-07-14-minijinja-templates-design.md  2026-07-15-native-scrollback-soft-wrap-design.md  2026-07-15-native-scrollback-soft-wrap.md  2026-07-24-ai-layout-controls-design.md  2026-07-24-ai-layout-controls.md
plans/: 2026-07-14-minijinja-templates.md  2026-07-15-native-scrollback-soft-wrap-design.md  2026-07-15-native-scrollback-soft-wrap.md  2026-07-21-runtime-controls-design.md  2026-07-21-runtime-controls.md
python/: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_providers.py
python/terminai_agent/: __init__.py  __main__.py  agent.py  config.py  forwarded_props.py  server.py
python/terminai_agent/tools/: __init__.py  grep_files.py  read_file.py
python/terminai_llm/: __init__.py  client.py  logging_bridge.py  tools.py
python/tests/: __init__.py  mock_llm_server.py  test_agent.py  test_client.py  test_integration.py  test_tools.py
scoop/: README.md
scripts/: build-unix.sh  build-windows-x86_64.cmd  build.sh  install-macos.sh  version.sh
src/: Cargo.toml  agent_launcher.rs  agent_terminal.rs  agent_tools.rs  app.rs  build.rs  client.rs  config.rs  config_lua.rs  encode_term.rs  env_loader.rs  event.rs  key.rs  lib.rs  llm_subprocess.rs  main.rs  mouse.rs  paths.rs  protocol.rs  scrollback.rs  settings.rs  shell.rs  shell_resolution.rs  state.rs  terminai_config.rs  terminai_config_init.rs  terminai_init.rs  test_config.rs  ui_approval.rs  ui_controls.rs  ui_keymap.rs  ui_procs.rs  ui_term.rs  ui_zoom_tip.rs
src/ai_proc/: chat_process.rs  context.rs  mod.rs  ui.rs
src/command/: executor.rs  mod.rs  parser.rs  validator.rs
src/deno/: fallback_agent.js  mod.rs  ops.rs  runtime.rs  types.rs
src/examples/: llm_adapter_example.rs
src/host/: sender.rs  socket.rs
src/hybrid/: event_loop.rs  input.rs  mod.rs  mode.rs
src/hybrid/rendering/: mod.rs  modal.rs  ratatui_renderer.rs
src/hybrid/routing/: buffer.rs  mod.rs  output_router.rs
src/hybrid/terminal/: content.rs  host_controller.rs  mod.rs  shadow.rs
src/kernel/: kernel.rs  kernel_message.rs  proc.rs
src/llm/: adapter.rs  adapter_test.rs  client.rs  client_test.rs  deno_client.rs  forwarded_props.rs  integration_example.rs  mod.rs  prompts.rs  providers.rs  python_bridge.rs  python_bridge_test.rs  subscriber.rs  terminal_context.rs  tool_coordinator.rs  tool_display.rs  tool_executor.rs
src/llm/tools/: grep_files.rs  mod.rs  read_file.rs
src/llm_old/: ag_ui_client.rs  ag_ui_protocol.rs  ag_ui_transport.rs  client.rs  mod.rs  test_fixtures.rs
src/llm_old/tools/: grep_files.rs  read_scrollback.rs  suggest_command.rs
src/mcp_host/: mod.rs  proxy.rs  server.rs  tool_defs.rs  tools.rs
src/modal/: add_proc.rs  command_suggestion.rs  commands_menu.rs  mod.rs  modal.rs  quit.rs  remove_proc.rs  rename_proc.rs
src/privacy/: filter.rs  mod.rs
src/proc/: inst.rs  msg.rs  proc.rs
src/term/: input_parser.rs  internal.rs  term_driver.rs
src/tests/: e2e_tests.rs  mod.rs  test_agui_tool_e2e.rs  test_llm_e2e.rs  test_llm_subprocess.rs  test_mcp_host.rs
src/tests/e2e/: mod.rs  test_ai.rs  test_hybrid.rs  test_resize.rs  test_scrollback.rs  test_ui.rs  test_vt100.rs
src/tests/e2e/snapshots/: termin__tests__e2e__test_ai__ai_chat_snapshot.snap  termin__tests__e2e__test_ai__command_approval_snapshot.snap  termin__tests__e2e__test_resize__resize_after_ai_overlay_corruption.snap  termin__tests__e2e__test_resize__resize_after_native_scrollback_lower_band.snap  termin__tests__e2e__test_ui__ui_snapshot.snap  termin__tests__e2e__test_vt100__vt100_snapshot.snap
src/ui_layer/: ai_overlay_layer.rs  mod.rs  terminal_layer.rs
src/vt100/: attrs.rs  cell.rs  grid.rs  mod.rs  parser.rs  screen.rs  term.rs  term_reply.rs
typescript/: deno.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
typescript/agent/: agent.ts  custom_tools.ts  fetch_polyfill.ts  mod.ts  system_prompt.ts  types.ts
