[profile.release]
strip = "symbols"
opt-level = "z"   # optimize for binary size
lto = true        # link time optimization
panic = "abort"
codegen-units = 1

[workspace]
resolver = "2"
default-members = ["src"]
members = ["helpers/print-key", "src"]

[workspace.lints.clippy]
all = "allow"

[patch.crates-io]
ratatui = { git = "https://github.com/emosenkis/ratatui", branch = "backport/scroll-up-v0.29.0" }
