[profile.release]
strip = "symbols"
opt-level = "z"   # optimize for binary size
lto = true        # link time optimization
panic = "abort"
codegen-units = 1

[workspace]
resolver = "2"
default-members = ["src"]
members = ["helpers/print-key", "src"]

[workspace.lints.clippy]
all = "allow"

[patch.crates-io]
ratatui = { git = "https://github.com/emosenkis/ratatui", branch = "backport/scroll-up-v0.29.0" }
# Use forked rat-salsa with chrono-conflicting modules disabled
rat-salsa = { git = "https://github.com/emosenkis/rat-salsa.git" }
rat-focus = { git = "https://github.com/emosenkis/rat-salsa.git" }
rat-event = { git = "https://github.com/emosenkis/rat-salsa.git" }
rat-widget = { git = "https://github.com/emosenkis/rat-salsa.git" }
rat-scrolled = { git = "https://github.com/emosenkis/rat-salsa.git" }
rat-theme4 = { git = "https://github.com/emosenkis/rat-salsa.git" }
rat-text = { git = "https://github.com/emosenkis/rat-salsa.git" }
# Use facade that re-exports crossterm 0.29 for all crossterm dependencies
# This unifies crossterm 0.28.1 (used by ratatui) and 0.29.0 (our direct dep)
crossterm = { path = "crossterm-0.28-facade" }
