[profile.release]
strip = "symbols"
opt-level = "z"   # optimize for binary size
lto = true        # link time optimization
panic = "unwind"
codegen-units = 1

[workspace]
resolver = "2"
default-members = ["src"]
members = ["helpers/print-key", "src"]
exclude = ["vendor/redact"]

[workspace.lints.clippy]
all = "allow"

[patch.crates-io]
ratatui = { path = "ratatui" }
rat-salsa = { path = "rat-salsa/rat-salsa" }
# Use facade that re-exports crossterm 0.29 for all crossterm dependencies
# This unifies crossterm 0.28.1 (used by ratatui) and 0.29.0 (our direct dep)
crossterm = { path = "crossterm-0.28-facade" }
