[project]
name = "terminai-agent"
version = "0.1.0"
description = "AI agent subprocess for Termin.AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ag-ui-claude-sdk",
    "claude-agent-sdk>=0.1.19",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]
[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length handled by formatter

[tool.uv.sources]
ag-ui-claude-sdk = { git = "https://github.com/Gkrumbach07/ag-ui", subdirectory = "integrations/claude-agent-sdk/python", rev = "feat/claude-agent-sdk-integration" }

