[package]
name = "termin"
version = "0.1.12"
description = "Interactive terminal wrapper with AI assistant"
repository = "https://github.com/emosenkis/terminai"
authors = ["Eitan Mosenkis <eitan@mosenkis.net>"]
license = "MIT"
edition = "2024"
autotests = false
categories = [
  "command-line-interface",
  "command-line-utilities",
  "development-tools",
]
keywords = ["cli", "terminal", "ai", "assistant"]

include = ["*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "termin"
path = "lib.rs"

[[bin]]
name = "terminai"
path = "bin/terminai.rs"

[[bin]]
name = "dump-config-schema"
path = "bin/dump-config-schema.rs"
required-features = ["schema"]

[dependencies]
anyhow = "1.0.72"
assert_matches = "1.5.0"
base64 = "0.22.0"
clap = { version = "4.3.19", features = ["cargo", "derive"] }
clipboard-win = "5.3.1"
crossterm = { version = "0.29", features = ["serde"] }
dunce = "1.0.4"
# Excluded "textfilter" feature that depends on regex (~0.7 MiB).
flexi_logger = { version = "0.31.2", default-features = false, features = [
  "colors",
] }
futures = { version = "0.3.28" }
indexmap = { version = "2.0.0", features = ["serde"] }
lazy_static = "1.4.0"
parking_lot = "0.12"
libc = "0.2.147"
log = "0.4.19"
phf = { version = "0.12.1", features = ["macros"] }
tui = { package = "ratatui", version = "0.29.0", default-features = false, features = [
  "serde",
  "underline-color",
  "crossterm",
  "scrolling-regions",
  "native-scrolling",
] }
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.25"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
triggered = "0.1.2"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
which = "8.0.0"
termwiz = "0.23.3"
portable-pty = { version = "0.9" }
bitflags = { version = "2.3.3", features = ["serde"] }
compact_str = { version = "0.9.0", features = ["serde"] }
tokio-util = { version = "0.7.8", features = ["full"] }
bytes = "1.5.0"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
scopeguard = "1.2.0"
itoa = "1"

redact-core = { path = "../vendor/redact/crates/redact-core" }
regex = "1.10"
dotenvy = "0.15"

# Terminai: rat-salsa dependencies for focus management
rat-salsa = { path = "../rat-salsa/rat-salsa", features = ["async"] }
rat-focus = { path = "../rat-salsa/rat-focus" }
rat-event = { path = "../rat-salsa/rat-event" }
rat-widget = { path = "../rat-salsa/rat-widget" }
rat-scrolled = { path = "../rat-salsa/rat-scrolled" }
rat-theme4 = { path = "../rat-salsa/rat-theme4" }
rat-text = { path = "../rat-salsa/rat-text" }
rat-cursor = { path = "../rat-salsa/rat-cursor" }
thiserror = "2.0"
crokey = "1.3.0"
rmcp = { version = "1.7.0", features = ["client", "server", "macros", "schemars", "transport-io", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
axum = "0.8"
notify = "8.2.0"
getrandom = "0.3"
minijinja = "2.21.0"

[target."cfg(unix)".dependencies]
daemonize = "0.5.0"
nix = { version = "0.30", features = ["signal"] }

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["consoleapi", "winuser", "handleapi", "processthreadsapi", "tlhelp32", "processenv", "winbase"] }

[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }
tempfile = "3.8"
env_logger = "0.11"

[features]
snapshot-tests = []
schema = []

[lints.clippy]
while_let_loop = "allow"
collapsible_else_if = "allow"
